Fix flickering on tags when hovering. Closes #239

--- a/less/app.less
+++ b/less/app.less
@@ -977,6 +977,7 @@ h1,h2,h3,h4,h5,h6 {
 	li {
 		display: inline-block;
 		margin-bottom: 3px;
+		-webkit-transform: translate3d(0,0,0); // fix safari flickering on hover
 	}
 
 	li a {
